<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_name"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_margin="10dp"
            android:entries="@array/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_margin="10dp"
            android:hint="@string/email_or_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_age"
            android:layout_margin="10dp"
            android:inputType="number"
            android:hint="@string/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_margin="10dp"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_save"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>